--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <body>
    
     
-      <video id="video" width="640" height="360" src="mp4.mp4" autoplay="autoplay"  > </video>
+      <video id="video" width="640" height="360" src="mp4.mp4" autoplay="autoplay"   x-webkit-airplay="true" y-webkit-airplay="true" webkit-playsinline="true" > </video>
      
 
 
